[project]
name = "decision-tree"
version = "1.0.0"
authors = [
    { name  = "Matthijs Wesseling", email = "matthijs.wesseling@bigdatarepublic.nl" },
]

description = "Exercises for the hands-on part of the training."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy>=1.25.1",
    "scipy>=1.11.1",
    "scikit-learn>=1.3.0",
]

[build-system]
requires = [
    "setuptools>=42",
    "numpy==1.25.1",
]
build-backend = "setuptools.build_meta"
